# Templates-Chatbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  security.yml
apps/web/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/tests/: page.test.tsx
deploy/compose/: docker-compose.yml
deploy/docker/: base-python.Dockerfile
docs/architecture/: overview.md
docs/architecture/adr/: 0001-monorepo-and-tooling.md
docs/runbooks/: ci-cd.md  local-dev.md
docs/security/: logging-redaction.md  threat-model-v0.md
infra/scripts/: bootstrap_local.sh
infra/terraform/live/dev/: main.tf  variables.tf
infra/terraform/live/prod/: main.tf  outputs.tf  variables.tf
infra/terraform/live/staging/: main.tf  variables.tf
internal_project_docs/: PROJECT_DESCRIPTION.md
internal_project_docs/milestones/: M0-Product-and-NFRs.md  M1-Repo-and-Engineering-Standards.md  M10-Observability-v1.md  M11-Load-Testing-and-Performance-Tuning.md  M12-Async-Jobs-Platform.md  M13-Tool-Plugin-Framework-v1.md  M14-RAG-v1.md  M15-Multi-Tenant-Hardening.md  M16-Security-Hardening-v2.md  M17-Reliability-and-DR.md  M18-FinOps-and-SLO-Operations.md  M19-Enterprise-Security-and-Compliance-v1.md  M2-Terraform-Foundation.md  M3-Network-Baseline.md  M4-Identity-and-Access.md  M5-Edge-and-Frontend-Delivery.md  M6-Core-Chat-API-v1.md  M7-Conversation-Storage-v1.md  M8-Redis-Layer-v1.md  M9-ECS-Fargate-Productionization.md  README.md
services/chat-api/: Dockerfile  README.md  pyproject.toml
services/chat-api/src/app/: main.py
services/chat-api/src/app/api/: health.py  router.py
services/chat-api/src/app/core/: config.py  logging.py  middleware.py
services/chat-api/src/app/models/: __init__.py
services/chat-api/src/app/services/: __init__.py
services/chat-api/src/app/utils/: __init__.py
services/chat-api/tests/: test_health.py
services/chat-worker/: Dockerfile  README.md  pyproject.toml
services/chat-worker/src/worker/: config.py  main.py
services/chat-worker/src/worker/jobs/: __init__.py
services/chat-worker/src/worker/utils/: __init__.py
services/chat-worker/tests/: test_worker.py
